src/Style/App.css
@import url('https://fonts.googleapis.com/css?family=Inter&display=medium');

.OutsideWrapper {
  background-color: #f6f3e7;
  display: flex;
  justify-content: center;
  overflow: hidden;
  font-family: 'Inter',  'sans-serif';
  font-weight: 600;
}
.AppWrapper {
  width: 100%;
  max-width: 30rem;
  display: flex;
  justify-content: space-between;
  align-items: stretch;
  flex-direction: column;
  height: 100dvh;
}
.App {
  overflow: hidden;
  flex-grow: 1;
  width: 100%;
}

.contentWrapper {
  display: flex;
  flex-direction: column;
  justify-content: stretch;
  align-items: center;
  position: relative;
  overflow: hidden;
  height: 100%;
  width: 100%;
}

.currentImage {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  pointer-events: none;
}


.toolbar {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  width: 100%;
  max-width: 30rem;
  height: 6dvh;
  background-color: #ffff;
  padding-top: 8px;
  z-index: 1;
}

.toolbar button {
  flex: 1;
  background-color: #ffff;
  border: 1px solid #ffff;
  height: 100%;
  width: 33%;
  cursor: pointer;
  align-items: center;
}

.toolbarImage {
  pointer-events: none;
}
.toolbarText {
  font-family: 'Inter';
  pointer-events: none;
  color: #a3a3a3;
}
.returnButtonImage {
  pointer-events: none;
  top: 30%;
  height: 50%;
  width: 50%;
  align-items: center;
}

.ReturnButton {
  transform: translate(0px, 20px);
}
.SliderContainer {
  position: absolute;
  z-index: 1;
  border-radius: 21px;
  background-color: white;
  box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.25);
  bottom: 0;
  right: 0;
  margin-right: 30px;
  margin-bottom: 2rem;
}
.SliderIcon {
  width: 100%;
  transform: scale(1.5);
  height: 100%;
  pointer-events: none;
}
.SliderIcon #Add{
  margin-top: 10px;
}
.SearchBarContainer {
  margin-top: 5%;
  height: 50px;
  z-index: 1;
  width: 80%;
}
.SearchBar {
  font-family: 'Inter', 'sans-serif';
  height: 100%;
  width: 100%;
  font-size: 20px;
  color: #a3a3a3;
  border: none;
  border-radius: 27.5px;
  padding: 12px 20px 12px 60px;
  box-shadow: 4px 4px 20px 0px rgba(0, 0, 0, 0.25);
  background-color: none;
  background-image: url('../svg/Search_Orange.svg');
  background-position: 20px 15px; 
  background-repeat: no-repeat;
}
.SearchBar:focus {
  border: 0;
  outline: none;
}
input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  display: none;
}
input[type="search"]::-webkit-search-cancel-button {
  display: none;
}

